--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "bitandbang",
+  "name": "joesepi-deets",
   "version": "1.3.0",
-  "description": "A personal card for Tierney Cyren (@bitandbang)",
+  "description": "A personal card for Joe Sepi",
   "main": "/bin/card.js",
   "bin": {
-    "bitandbang": "./bin/card.js"
+    "joesepi-deets": "./bin/card.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bnb/bitandbang.git"
+    "url": "https://github.com/joesepi/joesepi-deets.git"
   },
   "scripts": {
     "prepublish": "npm run build",
@@ -25,7 +25,7 @@
     "npx card",
     "business card"
   ],
-  "author": "Tierney Cyren <hello@bnb.im> (http://bnb.im)",
+  "author": "Joe Sepi <joesepi@gmail.com> (http://joesepi.com)",
   "license": "MIT",
   "files": [
     "bin/card.js",
